--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -5,7 +5,8 @@
             {% if section.settings.collection_list_subheading != blank %}<p class="body-md clr-general-text">{{ section.settings.collection_list_subheading }}</p>{% endif %}
         </div>
     {% endif %} 
-    <div class="{% if section.settings.collection_list_link_text != blank %} mb-6 lg:mb-8 {% endif %} grid gap-2 lg:gap-5 {% if section.settings.collection_list_per_row == 1 %} lg:grid-cols-1 {% elsif section.settings.collection_list_per_row == 2%} lg:grid-cols-2 {% elsif section.settings.collection_list_per_row == 3 %} lg:grid-cols-3 {% elsif section.settings.collection_list_per_row == 4 %} lg:grid-cols-4 {% elsif section.settings.collection_list_per_row == 5 %} lg:grid-cols-5 {% endif %}{% if section.settings.collection_list_per_row_mobile == 1 %} grid-cols-1 {% elsif section.settings.collection_list_per_row_mobile == 2 %} grid-cols-2 {% elsif section.settings.collection_list_per_row_mobile == 3 %} grid-cols-3 {% endif %}">
+    <div class="{% if section.settings.collection_list_link_text != blank %} mb-6 lg:mb-8 {% endif %} grid gap-3 sm:gap-4 lg:gap-5 
+    {% if section.settings.collection_list_per_row == 1 %} md:grid-cols-1 {% elsif section.settings.collection_list_per_row == 2%} md:grid-cols-2 {% elsif section.settings.collection_list_per_row == 3 %} md:grid-cols-3 {% elsif section.settings.collection_list_per_row == 4 %} md:grid-cols-4 {% elsif section.settings.collection_list_per_row == 5 %} md:grid-cols-5 {% endif %}{% if section.settings.collection_list_per_row_mobile == 1 %} grid-cols-1 {% elsif section.settings.collection_list_per_row_mobile == 2 %} grid-cols-2 {% elsif section.settings.collection_list_per_row_mobile == 3 %} grid-cols-3 {% endif %}">
         {% for block in section.blocks %}
         {%- assign collection = collections[block.settings.collection_list] -%}
             {% include 'collection-list-tile', collection: collection %}
@@ -14,12 +15,12 @@
 </section>
 
 <style>
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 640px) {
         #shopify-section-{{ section.id }} .mt-dynamic:nth-child(n+{{ section.settings.collection_list_per_row_mobile | plus: 1 }}) {
             margin-top: 8px;
         }
     }
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: 640px) {
         #shopify-section-{{ section.id }} .mt-dynamic:nth-child(n+{{ section.settings.collection_list_per_row | plus: 1 }}) {
             margin-top: 16px;
         }
