--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -41,6 +41,7 @@
   {{ 'jquery.modal.min.js' | asset_url | script_tag }}
   {{ 'flickity.js' | asset_url | script_tag }} 
   {{ 'application.js' | asset_url | script_tag }}
+  {{ 'theme-sections.min.js' | asset_url | script_tag }}
   <!-- Cart.js -->
   {{ 'rivets-cart.min.js' | asset_url | script_tag }}
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
