--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -117,14 +117,20 @@
     <div class="product_variant_container">
       <label for="quantity"><h3 class="text-md">Quantity</h3></label>
       <div class="quantity_input_container">
+        <button class="bg-white py-1 px-2 rounded-md border border-black shadow-md" onclick="decrement();updateProductInformation();">
+          <span aria-hidden="true" class="icon icon-minus"></span>
+        </button>
         <input min="1" type="number" id="quantity" name="quantity" onchange="updateProductInformation()" value="1" />
+        <button class="bg-white py-1 px-2 rounded-md border border-black shadow-md" onclick="increment();updateProductInformation();">
+          <span aria-hidden="true" class="icon icon-plus"></span>
+        </button>
       </div>
     </div>
 
     <!-- Price -->
     <!-- <h2 class="text_blue font_medium product_price" id="product_price">{{ product.selected_or_first_available_variant.price | money }}</h2> -->
     <!-- Add To Cart -->
-    <input type="submit" name="add" id="add_to_cart" data-cart-add="{{ product.variants.first.id }}" class="btn-lg btn-primary w-full py-4 mb-8 addtocart cursor-pointer" value="Add To Cart">
+    <input type="submit" name="add" id="add_to_cart" data-cart-add="{{ product.variants.first.id }}" data-cart-quantity="" class="btn-lg btn-primary w-full py-4 mb-8 addtocart cursor-pointer" value="Add To Cart">
     <!-- Ajax Message -->
     <p class="ajax_message"></p>
   </form>
@@ -133,3 +139,136 @@
   <div class="mb-8 md:mb-16">
     <p>{{ product.description }}</p>
   </div>
+
+  <script>
+    function decrement() {
+      $('#quantity').val( function(i, oldval) {
+        if (oldval > 1){
+          return --oldval;
+        } else {
+          return oldval;
+        }
+          
+      });
+    }
+    function increment() {
+      $('#quantity').val( function(i, oldval) {
+          return ++oldval;
+      });
+    }
+  </script>
+  
+<script>
+  // Function to get the value of the checked radio button in the form.
+  function getRadioVal(form, name) {
+      var val;
+      var radios = form.elements[name];
+      for (var i=0, len=radios.length; i<len; i++) {
+          if ( radios[i].checked ) {
+              val = radios[i].value; 
+              break;
+          }
+      }
+      return val;
+  }
+
+  {% unless product.has_only_default_variant %}
+    $(function(){
+      if (!$("input:radio[name='color']").is(":checked") && !$("input:radio[name='size']").is(":checked"){% if product.options[2] %} && !$("input:radio[name='material']").is(":checked"){% endif %}) {
+        $("input[name='add']").prop( "disabled", true );
+      }
+      else {
+        $("input[name='add']").prop( "disabled", false );
+      }
+
+      $('input').on('click', function(){
+        if (!$("input:radio[name='color']").is(":checked") || !$("input:radio[name='size']").is(":checked") {% if product.options[2] %} || !$("input:radio[name='material']").is(":checked"){% endif %}) {
+        $("input[name='add']").prop( "disabled", true );
+      }
+      else {
+        $("input[name='add']").prop( "disabled", false );
+      }
+
+      });
+      
+    });
+  {% endunless %}
+  
+
+  // Function runs every time a variant radio button or select dropdown changes.
+  function updateProductInformation() {
+    // Save the option select values
+    {% if product.options[0] %}
+      {% if product.options[0] == 'Color' %}
+        var opt1 = getRadioVal( document.getElementById('product_form'), 'color' );
+      {% else %}
+        var opt1 = document.getElementById('select_one').value;
+      {% endif %}
+    {% endif %}
+
+    {% if product.options[1] %}
+      {% if product.options[1] == 'Size' %}
+        var opt2 = getRadioVal( document.getElementById('product_form'), 'size' );
+      {% else %}
+        var opt2 = document.getElementById('select_two').value;
+      {% endif %}
+    {% endif %}
+
+    {% if product.options[2] %}
+      {% if product.options[2] == 'Material' %}
+        var opt3 = getRadioVal( document.getElementById('product_form'), 'material' );
+      {% else %}
+        var opt3 = document.getElementById('select_three').value;
+      {% endif %}
+    {% endif %}
+    // Capture the quantity and save it as a liquid variable
+    var quantity = document.getElementById('quantity').value;
+    document.getElementById('add_to_cart').setAttribute("data-cart-quantity", quantity);
+    {% capture quantity %}quantity{% endcapture %}
+    var id = '';
+    var available;
+    // Loop through all of the variants to check if the option values match any of the variant combinations
+    {% for v in product.variants %}
+      if(opt1=="{{ v.option1 }}"{% if product.options[1] %} && opt2=="{{ v.option2 }}"{% endif %}{% if product.options[2] %} && opt3=="{{ v.option3 }}"{% endif %}) {
+        // Save the ID for the specific variant combination.
+        var id = {{ v.id }};
+        var available = {{ v.available }};
+        // Save the price given the quantity the user has selected. Once multiplied then format the price using the js api.
+        var fullPrice = {{ quantity }} * {{ v.price }};
+        var price = Shopify.formatMoney({{v.price}}, "{{ shop.money_format }}");
+        var formattedPrice = Shopify.formatMoney(fullPrice, "{{ shop.money_format }}" );
+      }
+    {% endfor %}
+    // URL Query String
+    console.log(window.location.search);
+    // If variant has an id then set the cart to the selected variant and change the price field.
+    if(id!='') {
+      document.getElementById('add_to_cart').setAttribute('data-cart-add', id);
+      // document.getElementById('product_price').innerHTML = formattedPrice;
+      document.getElementById('price').innerHTML = price;
+      $(function(){
+        $("input[name='add']").prop( "disabled", false );
+      });
+      if(available == false){
+        document.getElementById('add_to_cart').setAttribute('value', 'Sold Out');
+        $(function(){
+          $("input[name='add']").prop( "disabled", true );
+        });
+      } else if (available == true) {
+        document.getElementById('add_to_cart').setAttribute('value', 'Add To Cart');
+        $(function(){
+          $("input[name='add']").prop( "disabled", false );
+        });
+      }
+      
+    } else {
+      document.getElementById('add_to_cart').setAttribute('data-variant-id', id);
+      document.getElementById('add_to_cart').setAttribute('value', 'Add To Cart');
+      // document.getElementById('product_price').innerHTML = 'Unavailable';
+      document.getElementById('price').innerHTML = 'Unavailable';
+      $(function(){
+        $("input[name='add']").prop( "disabled", true );
+      });
+    }
+  }
+</script>
