--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -1,26 +1,28 @@
-<div class="mb-8">
-    <div class="flex justify-between items-center mb-2">
-      <h5 class="text-sm">Wool Sneakers</h5>
-      <h4 class="text-lg" id="price">{{ product.selected_or_first_available_variant.price | money }}</h4>
+<div class="mb-8 sm:mt-8">
+  <h5 class="body-md clr-general-text mb-4">{{ product.vendor }}</h5>
+  <h2 class="heading-md font-bold mb-2">{{ product.title }}</h2>
+    <div class="flex space-x-3 items-center mb-2">
+      <h4 class="body-lg clr-general-links" id="price">{{ product.selected_or_first_available_variant.price | money }}</h4>
+      <h4 class="body-lg clr-general-text line-through" id="price">{{ product.compare_at_price_min | money }}</h4>
     </div>
-    <h2 class="text-2xl font-bold">{{ product.title }}</h2>
   </div>
 
   <form method="post" action="/cart/add" id="product_form" data-cart-submit>
     <!-- Variants -->
     {% if product.variants.size > 1 %}
+
       {% if product.options[0] %}
         <div class="product_variant_container">
           {% if product.options[0] == 'Color' %}
-            <div class="mb-8">
-              <div class="mb-4"><h5 class="text-sm uppercase">{{ product.options[0] }}</h5></div>
+            <div class="mb-4">
+              <div><h5 class="body-sm uppercase mb-2 clr-general-text">{{ product.options[0] }}</h5></div>
               <div class="flex space-x-2">
                 {% assign used = '' %}
                 {% for variant in product.variants %}
                 {% unless used contains variant.option1 %}
-                <div class="w-16 h-16 flex items-center justify-center">
-                  <input class="absolute z-0" type="radio" name="color" value="{{ variant.option1 }}" data-id="{{ variant.id }}" id="color-{{ variant.id }}" onclick="updateProductInformation()">
-                  <label for="color-{{ variant.id }}" class="option w-full h-full flex items-center justify-center cursor-pointer focus:ring-4 focus:ring-blue-600 bg-gray-300 hover:bg-black transition-colors ease-in-out rounded-md label" style="z-index: 5;"></label>
+                <div class="flex items-center justify-center">
+                  <input class="absolute z-0 appearance-none" type="radio" name="color" value="{{ variant.option1 }}" data-id="{{ variant.id }}" id="color-{{ variant.id }}" onclick="updateProductInformation()">
+                  <label for="color-{{ variant.id }}" class="option w-full h-12 flex items-center justify-center cursor-pointer transition-colors ease-in-out rounded-md label" style="z-index: 5;"></label>
                   {% capture used %}{{ used }} {{ variant.option1 }}{% endcapture %}
                 </div>
                 {% endunless %}
@@ -43,17 +45,18 @@
           {% endif %}
         </div>
       {% endif %}
+
       <div class="product_variant_container">
         {% if product.options[1] == 'Size' %}
-            <div class="mb-8">
-              <div class="mb-4"><h5 class="text-sm uppercase">{{ product.options[1] }}</h5></div>
+            <div class="mb-4">
+              <div><h5 class="body-sm uppercase mb-2 clr-general-text">{{ product.options[1] }}</h5></div>
               <div class="flex space-x-2">
                 {% assign used = '' %}
                 {% for variant in product.variants %}
                 {% unless used contains variant.option2 %}
                 <div class="flex justify-center align-middle items-center text-center relative">
                   <input class="absolute z-0" type="radio" name="size" value="{{ variant.option2 }}" data-id="{{ variant.id }}" id="size-{{ variant.id }}" onclick="updateProductInformation()">
-                  <label for="size-{{ variant.id }}" class="option w-full flex items-center justify-center bg-white rounded-md cursor-pointer label" style="z-index: 5;">{{ variant.option2 }}</label>
+                  <label for="size-{{ variant.id }}" class="option w-full h-12 flex items-center justify-center bg-white rounded-md cursor-pointer label" style="z-index: 5;">{{ variant.option2 }}</label>
                   
                   {% capture used %}{{ used }} {{ variant.option2 }}{% endcapture %}
                 </div>
@@ -76,18 +79,19 @@
             </div>
           {% endif %}
       </div>
+
       {% if product.options[2] %}
       <div class="product_variant_container">
         {% if product.options[2] == 'Material' %}
-            <div class="mb-8">
-              <div class="mb-4"><h5 class="text-sm uppercase">{{ product.options[2] }}</h5></div>
+            <div class="mb-4">
+              <div><h5 class="body-sm uppercase mb-2 clr-general-text">{{ product.options[2] }}</h5></div>
               <div class="flex space-x-2">
                 {% assign used = '' %}
                 {% for variant in product.variants %}
                 {% unless used contains variant.option3 %}
-                <div class="w-16 h-16 flex justify-center align-middle items-center text-center relative">
+                <div class="flex justify-center align-middle items-center text-center relative">
                   <input type="radio" name="material" value="{{ variant.option3 }}" data-id="{{ variant.id }}" id="material-{{ variant.id }}" onclick="updateProductInformation()" class="absolute z-0">
-                  <label for="material-{{ variant.id }}" class="w-full h-full flex items-center justify-center bg-white rounded-md cursor-pointer label" style="z-index: 5;">{{ variant.option3 }}</label>
+                  <label for="material-{{ variant.id }}" class="option w-full h-12 flex items-center justify-center bg-white rounded-md cursor-pointer label" style="z-index: 5;">{{ variant.option3 }}</label>
                   
                   {% capture used %}{{ used }} {{ variant.option3 }}{% endcapture %}
                 </div>
@@ -114,30 +118,29 @@
     {% endif %}
 
     <!-- Quantity -->
-    <div class="product_variant_container">
-      <label for="quantity"><h3 class="text-md">Quantity</h3></label>
+    <div class="product_variant_container mb-8">
+      <label for="quantity"><h3 class="body-sm uppercase mb-2 clr-general-text">Quantity</h3></label>
       <div class="quantity_input_container">
-        <button class="bg-white py-1 px-2 rounded-md border border-black shadow-md" onclick="decrement();updateProductInformation();">
-          <span aria-hidden="true" class="icon icon-minus"></span>
+        <button class="bg-white h-12 w-12 rounded-md" onclick="decrement();updateProductInformation();">
+          <span aria-hidden="true" class="icon icon-minus heading-sm"></span>
         </button>
-        <input min="1" type="number" id="quantity" name="quantity" onchange="updateProductInformation()" value="1" />
-        <button class="bg-white py-1 px-2 rounded-md border border-black shadow-md" onclick="increment();updateProductInformation();">
-          <span aria-hidden="true" class="icon icon-plus"></span>
+        <input class="h-10 w-8 text-center appearance-none outline" min="1" type="number" id="quantity" name="quantity" onchange="updateProductInformation()" value="1" />
+        <button class="bg-white h-12 w-12 rounded-md" onclick="increment();updateProductInformation();">
+          <span aria-hidden="true" class="icon icon-plus heading-sm"></span>
         </button>
       </div>
-    </div>
+    </div> 
 
     <!-- Price -->
     <!-- <h2 class="text_blue font_medium product_price" id="product_price">{{ product.selected_or_first_available_variant.price | money }}</h2> -->
     <!-- Add To Cart -->
-    <input type="submit" name="add" id="add_to_cart" data-cart-add="{{ product.variants.first.id }}" data-cart-quantity="" class="btn-lg btn-primary w-full py-4 mb-8 addtocart cursor-pointer" value="Add To Cart">
+    <input type="submit" name="add" id="add_to_cart" data-cart-add="{{ product.variants.first.id }}" data-cart-quantity="" class="btn-lg btn-primary w-full py-4 addtocart cursor-pointer" value="Add To Cart">
     <!-- Ajax Message -->
     <p class="ajax_message"></p>
   </form>
   {{ "jquery.js" | asset_url | script_tag }} 
-  
-  <div class="mb-8 md:mb-16">
-    <p>{{ product.description }}</p>
+  <div class="mt-8">
+    <p class="clr-general-text">{{ product.description }}</p>
   </div>
 
   <script>
