--- a/snippets/sticky-add-to-cart.liquid
+++ b/snippets/sticky-add-to-cart.liquid
@@ -1,7 +1,7 @@
-<div class="bg-white px-4 2xl:px-0 py-4 fixed bottom-0 w-full shadow-lg bottomMenu hidden" style="z-index: 9995;">
-    <div class="2xl:container mx-auto space-y-4 sm:space-y-0 justify-between block sm:flex items-center">
+<div class="bg-white border-b border-gray-100 py-3 sm:py-4 fixed top-0 w-full shadow-small bottomMenu hidden" style="z-index: 9995;">
+    <div class="max-width mx-auto justify-between flex items-center">
       <div class="items-center sm:space-x-6 block sm:flex">
-        <h3 class="font-medium whitespace-nowrap text-sm sm:text-base">Product name</h3>
+        <h3 class="font-medium whitespace-nowrap text-sm sm:text-base">{{ product.title }}</h3>
         <div class="flex space-x-2 text-xs sm:text-sm text-gray-500">
           <p>$89.00</p>
           <p>/</p>
@@ -11,10 +11,9 @@
         </div>
       </div>
       <div>
-        <a class="border rounded-md w-full py-2 sm:py-3 text-sm sm:text-base justify-center items-center px-4 bg-black space-x-2 text-white flex" href="">
-          <span aria-hidden="true" class="text-2xl icon icon-shopping-cart"></span>
-          <p>Add to cart</p>
-        </a>
+        <button class="btn-lg btn-primary w-full text-center">
+          Add to cart
+        </button>
       </div>
     </div>
 </div>
