--- a/snippets/collection-tile.liquid
+++ b/snippets/collection-tile.liquid
@@ -2,14 +2,14 @@
 <div class="bg-white w-full h-full relative hoverDropdown shadow p-3 lg:p-4 {% if section.settings.collection_box == true %} p-4 {% endif %}">
     <a href="{{ product.url }}">
         {% unless product.available %}
-            <div class="bg-black text-white text-center mt-2 ml-2 md:mt-4 md:ml-4 py-0.5 px-2 rounded-sm z-50 absolute text-xs">Sold Out</div>
+            <div class="bg-black text-white text-center mt-2 ml-2 md:mt-4 md:ml-4 py-0.5 px-2 rounded-sm z-50 absolute body-xs">Sold Out</div>
         {% endunless %}
         <div class="aspect-w-1 aspect-h-1 overflow-hidden">
             <img class="object-cover cursor-pointer pb-0 {% if section.settings.hover_animation == true %} transform hover:scale-125 transition ease-in-out {% endif %}" src="{{ product | img_url: '2048x2048' }}" alt="{{ product.title }}">
         </div>
     </a>
     <div class="space-y-2 pt-4">
-        <h3 class="text-gray-400 text-xs {% if section.settings.product_vendor == true %} flex {% elsif section.settings.product_vendor == false %} hidden {% endif %}">{{ product.vendor }}</h3>
+        {% if section.settings.product_vendor == true %}<h3 class="clr-general-light-text body-sm flex">{{ product.vendor }}</h3>{% endif %}
         <div class="space-y-1">
             <a href="{{ product.url }}">
                 <h3 class="body-md font-medium">{{ product.title }}</h3>
@@ -18,7 +18,9 @@
         </div> 
         <div class="items-center block sm:flex">
             <div class="flex">
-                <span class="shopify-product-reviews-badge{%- if settings.shopify_star != true -%} flex {% elsif settings.shopify_star == false %} hidden {%- endif -%}" data-id="{{ product.id }}"></span>
+                {% if settings.shopify_star == true %}
+                    <span class="shopify-product-reviews-badge flex" data-id="{{ product.id }}"></span>
+                {% endif %}
 
                 <div class="yotpo bottomLine {%- if settings.yotpo_star != true -%} flex {% elsif settings.yotpo_star == false %} hidden {%- endif -%}" data-product-id="{{ product.id }}">
                     {%- assign yotpo_offload_content = shop.metafields.yotpo.yotpo_offload_content %}
@@ -43,7 +45,7 @@
             <form method="post" action="/cart/add" class="w-full z-40 text-center">
                 {% if section.settings.collection_addtocart_quickshop_activate == 'default' %}
                     <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
-                    <div class="block space-y-2 {% if products_per_row == 2 %}  {% else %}  {% endif %}">
+                    <div class="block space-y-2">
                         {% if section.settings.collection_addtocart_activate == true %}
                             <button id="addToCartBtn" data-cart-add="{{ product.variants.first.id }}" class="appearance-none btn-sm btn-primary w-full">Add to cart</button>
                         {% endif %}
@@ -82,5 +84,15 @@
         box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.06);
         border: 1px solid #eee;
         border-radius: 4px;
+    }
+
+    .spr-icon {
+        font-size: 75% !important;
+    }
+
+    .spr-badge-caption {
+        font-size: var(--body-sm);
+        color: var(--clr-general-text);
+        margin-left: 4px;
     }
   </style>
