--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -140,7 +140,7 @@
   </form>
   {{ "jquery.js" | asset_url | script_tag }} 
   <div class="mt-8">
-    <p class="clr-general-text">{{ product.description }}</p>
+    <p class="body-md clr-general-text">{{ product.description }}</p>
   </div>
 
   <script>
