--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,13 +37,15 @@
     {{ content_for_layout }}
   </main>
   {% section 'footer' %}
+  {% render 'exit-popup' %}
   {% render 'cookies' %} 
   
   {{ 'jquery.js' | asset_url | script_tag }}
   {{ 'jquery.modal.min.js' | asset_url | script_tag }}
   {{ 'flickity.js' | asset_url | script_tag }} 
+  {{ 'jqueryform.js' | asset_url | script_tag }} 
   {{ 'application.js' | asset_url | script_tag }}
-  {{ 'theme-sections.min.js' | asset_url | script_tag }}
+  <!-- {{ 'theme-sections.min.js' | asset_url | script_tag }} -->
   <!-- Cart.js -->
   {{ 'rivets-cart.min.js' | asset_url | script_tag }}
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
