--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -121,11 +121,11 @@
     <div class="product_variant_container mb-8">
       <label for="quantity"><h3 class="body-sm uppercase mb-2 clr-general-text">Quantity</h3></label>
       <div class="quantity_input_container">
-        <button class="bg-white h-12 w-12 rounded-md" onclick="decrement();updateProductInformation();">
+        <button class="bg-white h-12 w-12 rounded-md" onclick="decrement();addCartUpdate();">
           <span aria-hidden="true" class="icon icon-minus heading-sm"></span>
         </button>
-        <input class="h-10 w-8 text-center appearance-none outline" min="1" type="number" id="quantity" name="quantity" onchange="updateProductInformation()" value="1" />
-        <button class="bg-white h-12 w-12 rounded-md" onclick="increment();updateProductInformation();">
+        <input class="h-10 w-8 text-center appearance-none outline" min="1" type="number" id="quantity" name="quantity" onchange="addCartUpdate()" value="1" />
+        <button class="bg-white h-12 w-12 rounded-md" onclick="increment();addCartUpdate();">
           <span aria-hidden="true" class="icon icon-plus heading-sm"></span>
         </button>
       </div>
@@ -158,7 +158,12 @@
       $('#quantity').val( function(i, oldval) {
           return ++oldval;
       });
-    }
+    } 
+
+    function addCartUpdate() {
+      var quantity = document.getElementById('quantity').value;
+      document.getElementById('add_to_cart').setAttribute("data-cart-quantity", quantity);
+      }
   </script>
   
 <script>
@@ -226,7 +231,7 @@
     {% endif %}
     // Capture the quantity and save it as a liquid variable
     var quantity = document.getElementById('quantity').value;
-    document.getElementById('add_to_cart').setAttribute("data-cart-quantity", quantity);
+    // document.getElementById('add_to_cart').setAttribute("data-cart-quantity", quantity);
     {% capture quantity %}quantity{% endcapture %}
     var id = '';
     var available;
@@ -243,7 +248,7 @@
       }
     {% endfor %}
     // URL Query String
-    console.log(window.location.search);
+    // console.log(window.location.search);
     // If variant has an id then set the cart to the selected variant and change the price field.
     if(id!='') {
       document.getElementById('add_to_cart').setAttribute('data-cart-add', id);
